<resources>
    <string name="app_name">TikTokTrainer</string>
    <string name="button_simple_time_mode">简单计时模式</string>
    <string name="button_simple_count_mode">简单计数模式</string>
    <string name="button_custom_mode">自定义模式</string>
    <string name="button_start">开始</string>

    <string name="tv_setting_round_time">每轮时间</string>
    <string name="tv_setting_rest_time">间隔时间</string>
    <string name="tv_setting_count">组数</string>
    <string name="tv_setting_round_count">每轮次数</string>
    <string name="tv_setting_per_time">每次时间</string>
    <string name="tv_setting_item_name">单项名称</string>

    <string name="status_work_out">WORK OUT</string>
    <string name="status_rest_now">REST NOW</string>
    <string name="status_pause">PAUSE</string>
    <string name="status_get_ready">GET READY</string>

    <string name="tv_no_event">没有训练项目</string>
</resources>
