<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xiaoyuz.com.tiktoktrainer.activity.MainActivity"
    android:gravity="center">

    <Button
        android:id="@+id/time"
        style="@style/MainFrameButtonStyle"
        android:text="@string/button_simple_time_mode"/>

    <Button
        android:id="@+id/count"
        style="@style/MainFrameButtonStyle"
        android:layout_below="@id/time"
        android:text="@string/button_simple_count_mode"/>

    <Button
        android:id="@+id/custom"
        style="@style/MainFrameButtonStyle"
        android:layout_below="@id/count"
        android:text="@string/button_custom_mode"/>

</RelativeLayout>
