<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_setting_background"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/layout_name"
            style="@style/SettingFrameItemStyle"
            android:layout_alignRight="@id/layout_round_count"
            android:layout_alignLeft="@id/layout_round_count">

            <TextView
                style="@style/SettingFrameTextViewStyle"
                android:text="@string/tv_setting_item_name" />

            <EditText
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_frame_tv_height" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_round_count"
            style="@style/SettingFrameItemStyle"
            android:layout_below="@id/layout_name">

            <TextView
                style="@style/SettingFrameTextViewStyle"
                android:text="@string/tv_setting_round_count" />

            <xiaoyuz.com.tiktoktrainer.widget.TrainerNumberPicker
                android:id="@+id/roundCount"
                style="@style/SettingFrameNumberPickStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_per_time"
            style="@style/SettingFrameItemStyle"
            android:layout_below="@id/layout_round_count">

            <TextView
                style="@style/SettingFrameTextViewStyle"
                android:text="@string/tv_setting_per_time" />

            <xiaoyuz.com.tiktoktrainer.widget.TrainerNumberPicker
                android:id="@+id/perTime"
                style="@style/SettingFrameNumberPickStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_rest_time"
            style="@style/SettingFrameItemStyle"
            android:layout_below="@id/layout_per_time">

            <TextView
                style="@style/SettingFrameTextViewStyle"
                android:text="@string/tv_setting_rest_time" />

            <xiaoyuz.com.tiktoktrainer.widget.TrainerNumberPicker
                android:id="@+id/restTime"
                style="@style/SettingFrameNumberPickStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_count"
            style="@style/SettingFrameItemStyle"
            android:layout_below="@id/layout_rest_time">

            <TextView
                style="@style/SettingFrameTextViewStyle"
                android:text="@string/tv_setting_count" />

            <xiaoyuz.com.tiktoktrainer.widget.TrainerNumberPicker
                android:id="@+id/count"
                style="@style/SettingFrameNumberPickStyle" />
        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_add" />
</android.support.design.widget.CoordinatorLayout>